# janusz-editor

./: DialogueEditor.vue  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChoicesPanel.vue  EditorPanel.vue  EditorView.vue  LauncherView.vue  ScenesPanel.vue  SidePanel.vue  TopBar.vue
src/stores/: projectStore.ts  tabsStore.ts
